Changed Base64 lib and pom.xml