@@ -37,7 +37,6 @@ import io.getstream.client.model.activities.BaseActivity;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
-import javax.xml.bind.DatatypeConverter;
 import java.io.UnsupportedEncodingException;
 import java.security.InvalidKeyException;
 import java.security.MessageDigest;
@@ -93,7 +92,7 @@ public final class SignatureUtils {
         SecretKeySpec signingKey = new SecretKeySpec(toSHA1(secretKey), HMAC_SHA1);
         Mac mac = Mac.getInstance(HMAC_SHA1);
         mac.init(signingKey);
-        return escapeDigest(DatatypeConverter.printBase64Binary(mac.doFinal(feedId.getBytes(UTF_8))));
+        return escapeDigest(Base64.encodeToString(mac.doFinal(feedId.getBytes(UTF_8)), Base64.DEFAULT));
     }
 
     private static byte[] toSHA1(final String key) throws UnsupportedEncodingException, NoSuchAlgorithmException {
@@ -103,5 +102,4 @@ public final class SignatureUtils {
     private static String escapeDigest(final String digest) {
         return digest.replace("+", "-").replace("/", "_").replaceAll("^=+", "").replaceAll("=+$", "");
     }
-
 }
